--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,8 @@
   "name": "JavaScript Console",
   "short_name": "JS Console",
   "description": "A JavaScript console with games and utilities",
-  "start_url": "/index.html",
+  "start_url": "/JS-Console/",  // Changed from "/index.html"
+  "scope": "/JS-Console/",      // Added to define the app’s scope
   "display": "standalone",
   "background_color": "#f4f4f4",
   "theme_color": "#4CAF50",
@@ -13,7 +14,7 @@
       "type": "image/png"
     },
     {
-      "src": "/JS-Console/images/images/icon-512x512.png", // Fixed typo in path
+      "src": "/JS-Console/images/icon-512x512.png", // Fixed path typo
       "sizes": "512x512",
       "type": "image/png"
     }
